@@ -149,3 +149,11 @@ attributes.
 
 This query matches only documents that have a value for the specified doc
 values field.
+
+## RAMDirectory, RAMFile, RAMInputStream, RAMOutputStream are deprecated ##
+
+This RAM-based directory implementation is an old piece of code that uses inefficient
+thread synchronization primitives and can be confused as "faster" than the NIO-based
+MMapDirectory. It is deprecated and scheduled for removal in future versions of 
+Lucene. (LUCENE-8467, LUCENE-8438)
+
