@@ -24,7 +24,13 @@ import org.apache.lucene.util.Accountable;
 
 /** 
  * Represents a file in RAM as a list of byte[] buffers.
- * @lucene.internal */
+ * 
+ * @lucene.internal 
+ * @deprecated This class uses inefficient synchronization and is discouraged
+ * in favor of {@link MMapDirectory}. It will be removed in future versions 
+ * of Lucene.
+ */
+@Deprecated
 public class RAMFile implements Accountable {
   protected final ArrayList<byte[]> buffers = new ArrayList<>();
   long length;
